--- a/reset.css
+++ b/reset.css
@@ -114,7 +114,7 @@ textarea {
 
 button,
 select {
-  text-transform: none;
+  text-transform: inherit;
 }
 
 button,
@@ -175,11 +175,6 @@ input::placeholder,
 textarea::placeholder {
   opacity: 1;
   color: gray;
-}
-
-button,
-[role="button"] {
-  cursor: pointer;
 }
 
 :disabled {
